front with no problem

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 CLIENT_ID="225441681768-8dn78n8fajj0fc3paak8rl1994o45c8n.apps.googleusercontent.com"
 CLIENT_SECRET="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"
-CLIENT_URL="http://localhost:3000/"
+CLIENT_URL="http://localhost:3000"
