--- a/servermn/package.json
+++ b/servermn/package.json
@@ -1,22 +1,19 @@
 {
     "name": "servermn",
     "version": "1.0.0",
+    "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon index.js"
+        "start": "node app.js"
     },
-    "keywords": [],
-    "author": "",
+    "author": "aziz",
     "license": "ISC",
-    "description": "",
     "dependencies": {
-        "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "joi": "^17.9.1",
-        "joi-password-complexity": "^5.1.0",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.3",
         "nodemon": "^2.0.22"
