--- a/servermn/package.json
+++ b/servermn/package.json
@@ -12,10 +12,12 @@
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
+        "ejs": "^3.1.9",
         "express": "^4.18.2",
         "joi": "^17.9.1",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.3",
+        "nodemailer": "^6.9.1",
         "nodemon": "^2.0.22"
     }
 }
