--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.2",
     "axios": "^1.3.4",
+    "cheerio": "^1.0.0-rc.12",
     "history": "^5.3.0",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
