--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "semantic-ui-react": "^2.1.4",
     "source-map-loader": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
